--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,26 @@
+p{
+    font-family: 'Roboto';
+}
 
+h1{
+    font-family: 'Roboto';
+}
+
+h2{
+    font-family: 'Roboto';
+}
+
+#visualization1 {
+    position: relative;
+}
+
+body {
+    width: 800px; 
+    height: 1200px; 
+    margin: 0 auto;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    padding: 20px;
+    background-color: #f5f5f5;
+}
