--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,250 @@
-p{
-    font-family: 'Roboto';
+p {
+	font-family: 'Roboto';
+	text-align: justify;
+	font-size: 20px;
+	margin-top: 0px;
 }
 
-h1{
-    font-family: 'Roboto';
+h1 {
+	font-family: 'Roboto';
+	text-align: center;
+	font-size: 47px;
 }
 
-h2{
-    font-family: 'Roboto';
+h2 {
+	font-family: 'Roboto';
+	text-align: justify;
+	font-size: 36px;
+	margin-top: 0px;
 }
 
-#visualization1 {
-    position: relative;
+h3 {
+	font-family: 'Roboto';
+	text-align: justify;
+	font-size: 24px;
+	margin-top: 0px;
 }
 
-body {
-    width: 800px; 
-    height: 1200px; 
-    margin: 0 auto;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    padding: 20px;
-    background-color: #f5f5f5;
+hr {
+	border-top: 2px solid goldenrod;
+}
+
+html {
+	width: 100%;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	line-height: 1.5;
+	padding: 20px;
+	background-color: #1E448A;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+}
+
+b {
+	color: #1E448A;
+	font-family: 'Roboto';
+}
+
+g {
+	color: goldenrod;
+	font-family: 'Roboto';
+}
+
+.page {
+	width: 1100px;
+	padding: 50px;
+	padding-top: 30px;
+	background-color: #f5f5f5;
+	border-radius: 15px;
+}
+
+.border {
+	width: 1200px;
+	padding: 10px;
+	padding-top: 10px;
+	background-color: goldenrod;
+	border-radius: 10px;
+}
+
+.intro {
+	display: grid;
+	grid-template-columns: auto auto;
+	background-color: #f5f5f5;
+	grid-gap: 0px;
+	align-items: start;
+}
+
+.lefttext {
+	grid-column: 1;
+	grid-row: 1;
+	margin-right: 25px;
+}
+
+.righttext {
+	grid-column: 2;
+	grid-row: 1;
+	margin-left: 25px;
+}
+
+.map-container {
+	display: grid;
+	grid-template-columns: auto auto;
+	background-color: #f5f5f5;
+	grid-gap: 0px;
+	align-items: center;
+}
+
+.map-title {
+	grid-row: 1;
+	text-align: center;
+	height: 65px;
+}
+
+.map-text {
+	grid-row: 2;
+	text-align: left;
+}
+
+.map {
+	grid-row: 3;
+	width: 100%;
+}
+
+input[name="Current_Year"] {
+	width: 100%;
+}
+
+input[name="year_selection"] {
+	width: 70%;
+}
+
+.linechart-container {
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-template-rows: auto auto auto;
+	grid-gap: 10px;
+	align-items: start;
+}
+
+.linechart-title {
+	grid-row: 1;
+	grid-column: 1 / span 2;
+	text-align: center;
+}
+
+.linechart-text {
+	grid-row: 2;
+	grid-column: 1 / span 2;
+	text-align: left;
+}
+
+.linechart {
+	grid-column: 1;
+	grid-row: 3;
+	width: 100%;
+	margin-right: 25px;
+}
+
+.linetext {
+	grid-column: 2;
+	grid-row: 3;
+	margin-left: 25px;
+}
+
+.pie-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto auto auto;
+	grid-gap: 10px;
+	align-items: start;
+}
+
+.pie {
+	grid-column: 2;
+	grid-row: 3;
+	width: 100%;
+	margin-left: 25px;
+}
+
+.pietext {
+	grid-column: 1;
+	grid-row: 3;
+	margin-right: 25px;
+
+}
+
+.radarbar-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto auto 1fr;
+	grid-gap: 10px;
+	align-items: center;
+}
+
+.indices-text {
+	height: 65px;
+}
+
+.radar-title {
+	grid-row: 1;
+	grid-column: 1;
+	text-align: left;
+}
+
+.radar-text {
+	grid-column: 1;
+	grid-row: 3;
+	margin-right: 25px;
+}
+
+.radar {
+	grid-row: 2;
+	grid-column: 1;
+	width: 100%;
+}
+
+.bar-title {
+	grid-row: 1;
+	grid-column: 2;
+	text-align: center;
+}
+
+.bar {
+	grid-row: 2;
+	grid-column: 2;
+	width: 100%;
+}
+
+.bartext {
+	grid-column: 2;
+	grid-row: 3;
+	margin-left: 25px;
+}
+
+.conclusion-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto auto 1fr;
+	grid-gap: 10px;
+	align-items: center;
+}
+
+.conclusion-title {
+	grid-column: 1/span 2;
+	grid-row: 1;
+	height: 50px;
+}
+
+.conclusion-text-left {
+	grid-column: 1;
+	grid-row: 2;
+	margin-right: 25px;
+}
+
+.conclusion-text-right {
+	grid-column: 2;
+	grid-row: 2;
+	margin-left: 25px;
 }
